# xkernel

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
app/: CHANGELOG.md  CONTRIBUTING.md
app/src/xkernel/: cli.py  lens_einstein.py  viewer_bounce_dot.py  xkernel.py
app/tests/: test_xkernel_basic.py
src/xkernel/: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  __init__.py  __main__.py  bundle.py  canonical.py  cli.py  cli_kK.py  demo_einstein.py  demo_schrodinger.py  demo_shannon.py  engine.py  fiber.py  filament.py  hashing.py  kinds.py  lens_schrodinger.py  lens_shannon.py  lens_wave.py  ops.py  receipt.py  receipt_hashing.py  viewer_1d.py  viewer_bounce_dot.py  viewer_center_wave.py  viewer_polar_string.py  viewer_scope.py  xkernel.py
src/xkernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_bundle.py  test_cli_kK_smoke.py  test_engine_api.py  test_filament.py  test_lenses.py  test_receipt.py  test_receipt_hashing.py  test_receipt_verify.py  test_receipt_verify_tampered_closure.py  test_xkernel_basic.py  test_xkernel_core.py
