[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xkernel"
version = "0.0.1"
description = "Minimal deterministic X-kernel with filament, fiber, and bundle structures."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "b32k>=0.0.2"
]
authors = [
  { name = "Scott Allen Cave" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/xkernelorg/xkernel"
Issues   = "https://github.com/xkernelorg/xkernel/issues"

[project.scripts]
xkernel = "xkernel.cli:main"
