[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xkernel"
version = "2.0.0"
description = "Invariant deterministic kernel: k=1, boolean closure, canonical execution + receipt hashing, strict CLI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "b32k>=0.0.2"
]
authors = [
  { name = "Scott Allen Cave" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/xkernelorg/xkernel"
Issues   = "https://github.com/xkernelorg/xkernel/issues"

[project.scripts]
xkernel = "xkernel.cli_kK:main"
